--- a/2009-spring/181.004/quizzes/0/quiz0.tex
+++ b/2009-spring/181.004/quizzes/0/quiz0.tex
@@ -21,8 +21,18 @@ $P_2(2, 4)$.
 
 \subsection*{Problem 2}
 
-Find the equation of a line that passes through the points $P_1(-6, -3)$ and
-$P_2(2, 4)$.
+Find the equation of a line that passes through the point $P_1(-6, -3)$ and has
+a slope 2.
+
+\subsection*{Problem 3}
+
+Find the slope and the $y$-intercept of the equation of a line:
+$$x+3y=0\,.$$
+
+\subsection*{Problem 4}
+
+Solve for $x$:
+$$4=e^x\,.$$
 
 \section*{Solutions}
 
