--- a/2009-spring/181.004/quizzes/0/quiz0.tex
+++ b/2009-spring/181.004/quizzes/0/quiz0.tex
@@ -36,5 +36,17 @@ $$4=e^x\,.$$
 
 \section*{Solutions}
 
+\subsection*{Problem 1}
+
+The equation of a line is $y=mx+b$ with $m={y_2-y_1\over x_2-x_1}$ so
+$$m={4-(-3)\over2-(-6)}={7\over8}$$
+and we get
+$$y={7\over8}x+b\,.$$
+To calculate $b$, we substitute either point into the equation, for example
+$x=2$, $y=4$:
+$$4={7\over8}2+b$$
+from which $b={9\over4}$. The equation of a line is then:
+$$y={7\over8}x+{9\over 4}\,.$$
+
 \end{document}
 
