All problems solved.

--- a/2009-spring/181.004/quizzes/0/quiz0.tex
+++ b/2009-spring/181.004/quizzes/0/quiz0.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[10pt]{article}
 \usepackage{fullpage}
 \usepackage[utf8]{inputenc}
 \usepackage{url}
@@ -48,5 +48,30 @@ $$4={7\over8}2+b$$
 from which $b={9\over4}$. The equation of a line is then:
 $$y={7\over8}x+{9\over 4}\,.$$
 
-\end{document}
+\subsection*{Problem 2}
 
+We are given the slope $m=2$ so:
+$$y=2x+b\,.$$
+To calculate $b$, we substitute the point $P_1$ into the equation and solve for
+$b$:
+$$-3=2(-6)+b\,,$$
+$$b=9\,.$$
+The equation of a line is then:
+$$y = 2x+9\,.$$
+
+\subsection*{Problem 3}
+
+We rewrite the equation to the form $y=mx+b$:
+$$x+3y=0\,,$$
+$$y=-{1\over3}x\,.$$
+So the slope is $m=-{1\over3}$ and y-intercept is $0$.
+
+\subsection*{Problem 4}
+
+We apply the natural logarithm to both sides of the equation:
+$$4=e^x\,,$$
+$$\ln 4=\ln e^x$$
+and use the identity $\ln e^x = x$:
+$$x=\ln 4\,.$$
+
+\end{document}
