--- a/2009-spring/181.002/quizzes/0/quiz0.tex
+++ b/2009-spring/181.002/quizzes/0/quiz0.tex
@@ -34,6 +34,10 @@ $$x+3y=0\,.$$
 Solve for $x$:
 $$4=e^x\,.$$
 
+\subsection*{Problem 5}
+
+Find the equation of a vertical line passing through the point $(5, 0)$.
+
 \section*{Solutions}
 
 \subsection*{Problem 1}
@@ -73,5 +77,10 @@ $$4=e^x\,,$$
 $$\ln 4=\ln e^x$$
 and use the identity $\ln e^x = x$:
 $$x=\ln 4\,.$$
+
+\subsection*{Problem 5}
+
+The equation of such line is just:
+$$x=5\,.$$
 
 \end{document}
