--- a/2009-spring/181.004/rec-01-20-2009/recitation.tex
+++ b/2009-spring/181.004/rec-01-20-2009/recitation.tex
@@ -18,6 +18,60 @@ The equation of a line is
 $$y=mx+b\,,$$
 where $m$ is a slope and $b$ is the $y$-intercept. Given two points $P_1(x_1,
 y_1)$ and $P_2(x_2, y_2)$, the slope $m$ can be expressed by:
-$$m={y_2-y_1\over x_2-x_1}\,.$$
+$$m={y_2-y_1\over x_2-x_1}={\Delta y\over\Delta x} = {\mbox{"rise"}\over\mbox{"run"}}\,.$$
+
+\subsection{Point slope intercept equation}
+
+$$y-y_1 = m(x-x_1)$$
+
+\subsection{Example 1}
+
+A line passes through points $(1, 4)$ and $(2, 10)$ find the equation of a
+line. Solution:
+$$y=6x-2$$
+
+\subsection{Example 2}
+
+A line passes through a point $(1, 4)$ and has a slope 6, find the equation of a
+line. Solution:
+$$y=6x-2$$
+
+\section{Exponentials and Logarithms}
+
+$$a^xa^y = a^{x+y}$$
+$${a^x\over a^y} = a^{x-y}$$
+$$(a^x)^y = a^{xy}$$
+$$(ab)^x = a^xb^x$$
+
+$$\log_a xy = \log_a x + \log_a y$$
+$$\log_a {x\over y} = \log_a x - \log_a y$$
+$$\log_a x^y = y\log_a x$$
+$$\log_e x = \ln(x)$$
+$$e^{\ln x} = x$$
+$$\ln e^x=x$$
+
+\subsection{Example 3}
+
+$$\ln x = 5$$
+Express $x$:
+$$e^{\ln x} = e^5$$
+$$x = e^5$$
+
+\subsection{Example 4}
+
+$$2 = e^y$$
+Express $y$:
+$$\ln 2 = \ln e^y = y\ln e = y$$
+
+\subsection{Example 5}
+
+Derive the formula $\log_a x = {\ln x\over \ln a}$:
+$$a^y = x$$
+Then $y = \log_a x$. Let's take a (natural) logarithm of both sides:
+$$\ln a^y = \ln x$$
+$$y \ln a = \ln x$$
+$$y = {\ln x\over\ln a}$$
+E.g. we have
+$$y = {\ln x\over\ln a} = \log_a x$$
 
 \end{document}
