--- a/2009-spring/181.004/rec-01-20-2009/recitation.tex
+++ b/2009-spring/181.004/rec-01-20-2009/recitation.tex
@@ -12,6 +12,11 @@ web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181.004\\
 date: January 20, 2009
 
+\section{Introduction}
+
+This was a review lesson of precalculus things, mainly equation of a line,
+exponentials and logarithms and trigonometry.
+
 \section{Equation of a line}
 
 The equation of a line is
@@ -73,5 +78,36 @@ $$y \ln a = \ln x$$
 $$y = {\ln x\over\ln a}$$
 E.g. we have
 $$y = {\ln x\over\ln a} = \log_a x$$
+
+\section{Trigonometry}
+
+Definitions of $\sin x$ and $\cos x$ using a unit circle, e.g.:
+$$\sin\theta = {\Delta y\over 1} = \Delta y$$
+$$\cos\theta = {\Delta x\over 1} = \Delta x$$
+
+Use the unit circle to derive:
+$$\sin 0 = 0$$
+$$\cos 0 = 1$$
+$$\sin \pi = 0$$
+$$\cos \pi = -1$$
+$$\sin 2\pi = 0$$
+$$\cos 2\pi = 1$$
+$$\sin 3\pi = 0$$
+$$\cos 3\pi = -1$$
+
+\subsection{Trigonometric identities}
+
+$$\sin^2x + \cos^2x = 1$$
+$$\sin(x\pm y)=\sin x\cos y \pm \cos x\sin y$$
+$$\cos(x\pm y)=\cos x\cos y \mp \sin x\sin y$$
+
+Use these to derive the other identities, for example:
+$$\sin2x = \sin(x+x) = \sin x \cos x + \cos x\sin x = 2\sin x\cos x$$
+$$\sin3x = \sin(2x+x) = \sin 2x \cos x + \cos 2x\sin x = \cdots$$
+$$\cos2x = \cos(x+x) = \cos x \cos x - \sin x\sin x = \cos^2 x - \sin^2 x =
+1-2\sin^2 x = -1+2\cos^2x$$
+Use the last one to show:
+$$\sin^2x = {1-\cos2x\over 2}$$
+$$\cos^2x = {1+\cos2x\over 2}$$
 
 \end{document}
