--- a/2009-spring/181.002/rec-01-20-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-20-2009/recitation.tex
@@ -12,12 +12,102 @@ web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181.002\\
 date: January 20, 2009
 
+\section{Introduction}
+
+This was a review lesson of precalculus things, mainly equation of a line,
+exponentials and logarithms and trigonometry.
+
 \section{Equation of a line}
 
 The equation of a line is
 $$y=mx+b\,,$$
 where $m$ is a slope and $b$ is the $y$-intercept. Given two points $P_1(x_1,
 y_1)$ and $P_2(x_2, y_2)$, the slope $m$ can be expressed by:
-$$m={y_2-y_1\over x_2-x_1}\,.$$
+$$m={y_2-y_1\over x_2-x_1}={\Delta y\over\Delta x} = {\mbox{"rise"}\over\mbox{"run"}}\,.$$
+
+\subsection{Point slope intercept equation}
+
+$$y-y_1 = m(x-x_1)$$
+
+\subsection{Example 1}
+
+A line passes through points $(1, 4)$ and $(2, 10)$ find the equation of a
+line. Solution:
+$$y=6x-2$$
+
+\subsection{Example 2}
+
+A line passes through a point $(1, 4)$ and has a slope 6, find the equation of a
+line. Solution:
+$$y=6x-2$$
+
+\section{Exponentials and Logarithms}
+
+$$a^xa^y = a^{x+y}$$
+$${a^x\over a^y} = a^{x-y}$$
+$$(a^x)^y = a^{xy}$$
+$$(ab)^x = a^xb^x$$
+
+$$\log_a xy = \log_a x + \log_a y$$
+$$\log_a {x\over y} = \log_a x - \log_a y$$
+$$\log_a x^y = y\log_a x$$
+$$\log_e x = \ln(x)$$
+$$e^{\ln x} = x$$
+$$\ln e^x=x$$
+
+\subsection{Example 3}
+
+$$\ln x = 5$$
+Express $x$:
+$$e^{\ln x} = e^5$$
+$$x = e^5$$
+
+\subsection{Example 4}
+
+$$2 = e^y$$
+Express $y$:
+$$\ln 2 = \ln e^y = y\ln e = y$$
+
+\subsection{Example 5}
+
+Derive the formula $\log_a x = {\ln x\over \ln a}$:
+$$a^y = x$$
+Then $y = \log_a x$. Let's take a (natural) logarithm of both sides:
+$$\ln a^y = \ln x$$
+$$y \ln a = \ln x$$
+$$y = {\ln x\over\ln a}$$
+E.g. we have
+$$y = {\ln x\over\ln a} = \log_a x$$
+
+\section{Trigonometry}
+
+Definitions of $\sin x$ and $\cos x$ using a unit circle, e.g.:
+$$\sin\theta = {\Delta y\over 1} = \Delta y$$
+$$\cos\theta = {\Delta x\over 1} = \Delta x$$
+
+Use the unit circle to derive:
+$$\sin 0 = 0$$
+$$\cos 0 = 1$$
+$$\sin \pi = 0$$
+$$\cos \pi = -1$$
+$$\sin 2\pi = 0$$
+$$\cos 2\pi = 1$$
+$$\sin 3\pi = 0$$
+$$\cos 3\pi = -1$$
+
+\subsection{Trigonometric identities}
+
+$$\sin^2x + \cos^2x = 1$$
+$$\sin(x\pm y)=\sin x\cos y \pm \cos x\sin y$$
+$$\cos(x\pm y)=\cos x\cos y \mp \sin x\sin y$$
+
+Use these to derive the other identities, for example:
+$$\sin2x = \sin(x+x) = \sin x \cos x + \cos x\sin x = 2\sin x\cos x$$
+$$\sin3x = \sin(2x+x) = \sin 2x \cos x + \cos 2x\sin x = \cdots$$
+$$\cos2x = \cos(x+x) = \cos x \cos x - \sin x\sin x = \cos^2 x - \sin^2 x =
+1-2\sin^2 x = -1+2\cos^2x$$
+Use the last one to show:
+$$\sin^2x = {1-\cos2x\over 2}$$
+$$\cos^2x = {1+\cos2x\over 2}$$
 
 \end{document}
