--- a/2009-spring/181.002/rec-01-22-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-22-2009/recitation.tex
@@ -12,12 +12,31 @@ web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181\\
 date: January 22, 2009
 
-\section{Equation of a line}
+\section{Introduction}
 
-The equation of a line is
-$$y=mx+b\,,$$
-where $m$ is a slope and $b$ is the $y$-intercept. Given two points $P_1(x_1,
-y_1)$ and $P_2(x_2, y_2)$, the slope $m$ can be expressed by:
-$$m={y_2-y_1\over x_2-x_1}\,.$$
+\section{Problem 1}
+
+A tank holds 1000 gallons of water, which drains from the bottom of the tank in
+half an hour. The values in the table show the volume V of water remaining in
+the tank (in gallons) after t minutes.
+
+\begin{tabular}{|l||c|c|c|c|c|c|}
+\hline
+t(min) & 5   & 10  & 15  & 20  & 25 & 30 \\ \hline
+V(gal) & 694 & 444 & 250 & 111 & 28 & 0 \\
+\hline
+\end{tabular}
+
+a) If P is the point (15, 250) on the graph of V, find the
+slopes of the secant lines PQ when Q is the point on the
+graph with $t = 5, 10, 20, 25$, and 30.
+
+b) Estimate the slope of the tangent line at P by averaging
+the slopes of two secant lines.
+
+c) Use a graph of the function to estimate the slope of the tangent line at P.
+(This slope represents the rate at which the water is flowing from the tank
+after 15 minutes.)
+
 
 \end{document}
