--- a/2009-spring/181.002/rec-01-22-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-22-2009/recitation.tex
@@ -38,5 +38,9 @@ c) Use a graph of the function to estimate the slope of the tangent line at P.
 (This slope represents the rate at which the water is flowing from the tank
 after 15 minutes.)
 
+\subsection*{Solution}
+
+For $t=5$, 
+
 
 \end{document}
