--- a/2009-spring/181.002/rec-01-22-2009/quiz.tex
+++ b/2009-spring/181.002/rec-01-22-2009/quiz.tex
@@ -46,7 +46,7 @@ $t=2\rm\,s$.
 
 Note: this is a problem 8., section 2.1., just with different numbers.
 
-Average velocity is the defined as the distance traveled, divided by the time
+Average velocity is defined as the distance traveled, divided by the time
 period for which we traveled:
 $$v={\Delta s\over\Delta t}$$
 More precisely, in our case the average velocity between the times $t_1$ and
