--- a/2009-spring/181.002/rec-01-27-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-27-2009/recitation.tex
@@ -42,9 +42,32 @@ $$\lim_{x\to1}g(x)=\lim_{x\to1}{x-1\over (x-1)(x^2+x+1)}=\lim_{x\to1}{1\over x^2
 We did a problem 9, section 2.2. See the solution of the quiz 2 for a solution
 (just the numbers are different.
 
-\section{Problem 3}
+\section{Limits}
+
+We then calculated several limits:
 
 $$\lim_{x\to2}{x^2+x-6\over x-2}=\lim_{x\to2}{(x+3)(x-2)\over x-2} =
 \lim_{x\to2} x+ 3 = 5$$
+$$\lim_{x\to-4}{x^2+5x+4\over x^2+3x-4} =
+\lim_{x\to-4}{(x+4)(x+1)\over(x+4)(x-1)} = \lim_{x\to-4}{x+1\over x-1} =
+{3\over 5}$$
+$$\lim_{x\to2}{x^2-x-6\over x-2} = \pm\infty\,,\mbox{e.g. the limit doesn't
+exists}$$
+$$\lim_{x\to1}{x^3-1\over x^2-1} = \lim_{x\to1}{(x-1)(x^2+x+1)\over(x-1)(x+1)}
+= {3\over2}$$
+$$
+\lim_{h\to0}{(2+h)^3-8\over h}
+=\lim_{h\to0}{2^3+3\cdot2^2h+3\cdot2h^2+h^3-8\over h}
+=\lim_{h\to0}{12h+6h^2+h^3\over h}
+=
+$$
+$$
+=\lim_{h\to0}(12+6h+h^2)
+=12
+$$
+
+\section{Quizzes}
+
+We did Quiz 2 and 3.
 
 \end{document}
