--- a/2009-spring/181.002/rec-01-29-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-29-2009/recitation.tex
@@ -60,6 +60,54 @@ continuous for all $x>0$, so $G(t)$ which is a composition of a logarithm and a
 polynomial, is continuous for all $t$ from its domain, e.g. for all
 $t\in (-\infty, -1) \cup (1, \infty)$.
 
+\section{Problem 5}
+
+Excercise 31. In order for the function to be continuous, $cx+1$ must be equal
+to $cx^2-1$ for $x=3$, e.g.:
+$$c\cdot3+1 = c\cdot 3^3-1$$
+$$3c+2 = 9c$$
+$$2 = 6c$$
+$$c = {1\over3}$$
+
+\section{Problem 6}
+
+Excercise 33. $f(x) = x^3-x^2+x$ attains all values between $-\infty$ and
+$\infty$, so from the Intermediate Value Theorem, it also attains the value 10
+for some $c$, e.g. $f(c)=10$.
+
+\section{Problem 7}
+
+Excercise 45. Is there a number that is exactly 1 more than its cube?
+
+Solution: The number $x$ should be exactly 1 more than its cube $x^3$, e.g.
+$x=1+x^3$, e.g. we need to solve
+$$x^3-x+1=0$$
+The function $x^3-x+1$ attains all values from $-\infty$ to $\infty$, so it has
+at least one real solution.
+
+Optional: In fact, it turns out that
+it has one real and two complex solutions:
+$$x_1=\frac{- 6 6^{\frac{2}{3}} - 3 6^{\frac{1}{3}} \left(18 + 2
+\sqrt{69}\right)^{\frac{2}{3}}}{18 \left(18 + 2
+\sqrt{69}\right)^{\frac{1}{3}}}$$
+$$x_2=\frac{2 6^{\frac{1}{3}} \sqrt{69} - 6
+i 6^{\frac{1}{3}} \sqrt{23} + 18 6^{\frac{1}{3}} + 2
+6^{\frac{2}{3}} \left(18 + 2 \sqrt{69}\right)^{\frac{1}{3}} - 18
+i \sqrt{3} 6^{\frac{1}{3}} + 2 i \sqrt{3}
+6^{\frac{2}{3}} \left(18 + 2 \sqrt{69}\right)^{\frac{1}{3}}}{12 \left(18 + 2
+\sqrt{69}\right)^{\frac{2}{3}}}$$
+$$x_3=\frac{2 6^{\frac{1}{3}} \sqrt{69} + 6
+i 6^{\frac{1}{3}} \sqrt{23} + 18 6^{\frac{1}{3}} + 2
+6^{\frac{2}{3}} \left(18 + 2 \sqrt{69}\right)^{\frac{1}{3}} + 18
+i \sqrt{3} 6^{\frac{1}{3}} - 2 i \sqrt{3}
+6^{\frac{2}{3}} \left(18 + 2 \sqrt{69}\right)^{\frac{1}{3}}}{12 \left(18 + 2
+\sqrt{69}\right)^{\frac{2}{3}}}$$
+So let's stick to the real solution $x_1$:
+$$x=\frac{- 6 6^{\frac{2}{3}} - 3 6^{\frac{1}{3}} \left(18 + 2
+\sqrt{69}\right)^{\frac{2}{3}}}{18 \left(18 + 2
+\sqrt{69}\right)^{\frac{1}{3}}}\doteq-1.32471795724475$$
+Indeed, $x^3\doteq-2.32471795724475$, which is one less than $x$.
+
 \section{Quizzes}
 
 We did Quiz 4.
