--- a/2009-spring/181.002/rec-01-29-2009/recitation.tex
+++ b/2009-spring/181.002/rec-01-29-2009/recitation.tex
@@ -108,6 +108,28 @@ $$x=\frac{- 6 6^{\frac{2}{3}} - 3 6^{\frac{1}{3}} \left(18 + 2
 \sqrt{69}\right)^{\frac{1}{3}}}\doteq-1.32471795724475$$
 Indeed, $x^3\doteq-2.32471795724475$, which is one less than $x$.
 
+\section{Problem 8}
+
+Given a function $f(x)=\sqrt x$, what is the slope at a point $x=a$?
+
+This is a very important problem. We need to choose two points on the function,
+so for example $P(a, f(a))$ and $Q(a+h, f(a+h))$ for some $h$. The slope is defined as
+$$m={y_2-y_1\over x_2-x_1}$$
+In our case $y_2=f(a+h)$, $y_1=f(a)$, $x_2=a+h$ and $x_1=a$ so we get:
+$$m_{PQ} = {f(a+h)-f(a)\over a+h - a}={f(a+h)-f(a)\over h}$$
+The slope $m$ at the point $a$ is then equal to
+$$m=\lim_{h\to0} m_{PQ}=\lim_{h\to0}{f(a+h)-f(a)\over h}$$
+For our particular case $f(x)=\sqrt x$ we get:
+$$m=\lim_{h\to0}{\sqrt{a+h}-\sqrt{a}\over h}
+=\lim_{h\to0}{\sqrt{a+h}-\sqrt{a}\over h}
+{\sqrt{a+h}+\sqrt{a}\over \sqrt{a+h}+\sqrt{a}}
+=\lim_{h\to0}{(a+h)-a\over h(\sqrt{a+h}+\sqrt{a})}=$$
+$$=\lim_{h\to0}{h\over h(\sqrt{a+h}+\sqrt{a})}
+=\lim_{h\to0}{1\over \sqrt{a+h}+\sqrt{a}}
+={1\over \sqrt{a+0}+\sqrt{a}}
+={1\over 2\sqrt{a}}$$
+
+
 \section{Quizzes}
 
 We did Quiz 4.
