--- a/2009-spring/181.002/rec-02-05-2009/recitation.tex
+++ b/2009-spring/181.002/rec-02-05-2009/recitation.tex
@@ -10,69 +10,16 @@
 \noindent TA: Ondřej Čertík\\
 web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181\\
-date: February 3, 2009
+date: February 5, 2009
 
 \section{Introduction}
 
-\section{Problem 1}
+We did section 2.7
 
-Excercise 17, section 2.5.
-$$\lim_{x\to1}{2-x\over(x-1)^2} = {1\over0^{+}} = \infty$$
-
-\section{Problem 2}
-
-Excercise 21, section 2.5:
-$$\lim_{x\to\infty} {x^3+5x\over 2x^3-x^2+4}=
-\lim_{x\to\infty} {1+{5x\over x^3}\over 2-{x^2\over x^3}+{4\over x^3}}
-={1\over 2}
-$$
-Three other similar examples:
-$$\lim_{x\to\infty} {x^2+5x\over 2x^3-x^2+4}=
-\lim_{x\to\infty} {{1\over x}+{5x\over x^3}\over 2-{x^2\over x^3}+{4\over x^3}}
-=0
-$$
-$$\lim_{x\to\infty} {x^4+5x\over 2x^3-x^2+4}=
-\lim_{x\to\infty} {x+{5x\over x^3}\over 2-{x^2\over x^3}+{4\over x^3}}
-=+\infty
-$$
-$$\lim_{x\to\infty} {x^4+5x\over -2x^3-x^2+4}=
-\lim_{x\to\infty} {x+{5x\over x^3}\over -2-{x^2\over x^3}+{4\over x^3}}
-=-\infty
-$$
-
-\section{Problem 3}
-
-Excercise 25.
-$$\lim_{x\to\infty}\left(\sqrt{9x^2+x}-3x\right)=
-\lim_{x\to\infty}\left(\sqrt{9x^2+x}-3x\right)
-{\sqrt{9x^2+x}+3x\over\sqrt{9x^2+x}+3x}=
-\lim_{x\to\infty}{(9x^2+x)-9x^2
-\over\sqrt{9x^2+x}+3x}=
-$$
-$$
-=
-\lim_{x\to\infty}{x\over\sqrt{9x^2+x}+3x}=
-\lim_{x\to\infty}{1\over{\sqrt{9x^2+x}\over x}+3}=
-\lim_{x\to\infty}{1\over{\sqrt{9+{1\over x}}+3}}=
-{1\over{\sqrt{9}+3}}={1\over6}
-$$
-
-\section{Problem 4}
-
-Similar to the Excercise 8, section 2.6.
-$$y=x^3$$
-Calculate the slope of the tangent line at the point $x=a$.
-The slope at the point $a$ is defined as
-$$m = \lim_{h\to0}{y(a+h)-y(a)\over h}$$
-So we get:
-$$m = \lim_{h\to0}{y(a+h)-y(a)\over h}=
-\lim_{h\to0}{(a+h)^3-a^3\over h}=
-\lim_{h\to0}{3a^2h +O(h^2)\over h}=
-\lim_{h\to0}\left({3a^2 +O(h)}\right)=3a^2
-$$
+Problem 7, 10, 21, 23.
 
 \section{Quizzes}
 
-We did Quiz 5 \& 6.
+We did the Quiz 7.
 
 \end{document}
