--- a/2009-spring/181.002/rec-02-19-2009/recitation.tex
+++ b/2009-spring/181.002/rec-02-19-2009/recitation.tex
@@ -10,16 +10,28 @@
 \noindent TA: Ondřej Čertík\\
 web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181\\
-date: February 5, 2009
+date: February 19, 2009
 
 \section{Introduction}
 
-We did section 2.7
+We did lots of problems with derivatives from the section 3.1, basically the
+following rules:
+$$(x^n)' = nx^{n-1}$$
+$$(cf(x))' = cf'(x)$$
+$$(e^x)' = e^x$$
+$$(f\pm g)' = f'\pm g'$$
 
-Problems 7, 10, 21, 23.
+and we also noted all the different ways of denoting a derivative:
+$$f'(x)
+=f'
+={\d\over\d x}f(x)
+={\d\over\d x}(f(x))
+={\d\over\d x}f
+={\d f\over\d x}
+$$
 
 \section{Quizzes}
 
-We did the Quiz 7.
+We did the Quiz 10.
 
 \end{document}
