--- a/2009-spring/181.002/rec-02-24-2009/recitation.tex
+++ b/2009-spring/181.002/rec-02-24-2009/recitation.tex
@@ -14,7 +14,8 @@ date: February 24, 2009
 
 \section{Introduction}
 
-We did retakes, then problems from the section 3.2.
+We did retakes, then problems from the section 3.2, so a product rule and a
+quotient rule.
 
 \section{Problem}
 
