--- a/2009-spring/181.002/rec-02-24-2009/quiz.tex
+++ b/2009-spring/181.002/rec-02-24-2009/quiz.tex
@@ -28,4 +28,22 @@ $$z(w) =   w ^ {3/2} (w + c e^w)$$
 Page 198, problem 16.
 $$f(x) = {1-xe^x\over x+e^x}$$
 
+\subsection*{Solution to the Problem 1}
+
+$$z'(w) = (w^{3/2} w + w^{3/2}ce^w)'=(w^{5/2}+w^{3/2}ce^w)'
+={5\over2}w^{3/2}+{3\over2}w^{1\over2} c e^w + w^{3/2}ce^w$$
+
+\subsection*{Solution to the Problem 2}
+
+$$f'(x) = {(1-xe^x)'(x+e^x)-(1-xe^x)(x+e^x)'\over(x+e^x)^2}
+={-(e^x+xe^x)(x+e^x)-(1-xe^x)(1+e^x)\over(x+e^x)^2}=
+$$
+$$
+={-(xe^x+e^{2x}+x^2e^x+xe^{2x})-(1+e^x-xe^x-xe^{2x})\over(x+e^x)^2}
+={-xe^x-e^{2x}-x^2e^x-xe^{2x}-1-e^x+xe^x+xe^{2x}\over(x+e^x)^2}
+$$
+$$
+={-e^{2x}-x^2e^x-1-e^x\over(x+e^x)^2}
+$$
+
 \end{document}
