--- a/2009-spring/181.002/rec-03-05-2009/quiz.tex
+++ b/2009-spring/181.002/rec-03-05-2009/quiz.tex
@@ -18,11 +18,18 @@ date: March 5, 2009
 
 \section*{Quiz 15}
 
-Find the derivatives of the functions below:
+\subsection*{Problem 1}
 
-$$y=\ln(x^3+10x)$$
-$$y=\log_a(e^{x^2+3x})$$
-$$y=(\sin x)^x$$
-$$y=x^4\ln\sqrt x$$
+Find ${\d y\over \d x}$ by implicit differentiation
+
+$$1+x=\sin(xy^2)$$
+
+\subsection*{Problem 2}
+
+Find and equation of the tangent line to the given curve at the point $(1,
+-2)$.
+
+$$y^2=x^3+3x^2$$
+
 
 \end{document}
