--- a/2009-spring/181.004/rec-03-03-2009/quiz.tex
+++ b/2009-spring/181.004/rec-03-03-2009/quiz.tex
@@ -18,15 +18,25 @@ date: March 3, 2009
 
 \section*{Quiz 14}
 
-\subsection*{Problem 1}
+Find the derivatives of the functions below:
 
-Find $y'$ and $y''$:
-$$y=e^{\alpha x} \sin \beta x$$
+$$y=\sin(\cos x)$$
+$$y=(2x^4+3x^3+x^2-1)^4$$
+$$(x^2+y^2)^2=25(x^2+y^2)$$
+$$x\cos x^2 = y\sin^2 y$$
 
-\subsection*{Problem 2}
+\subsection*{Solution}
 
-Find an equation of the tangent line to the curve at the point $(0, 1)$.
-
-$$y=(1+2x)^10$$
+1:
+$$y'=-\cos(\cos x)\sin x$$
+2:
+$$y'=4(2x^4+3x^3+x^2-1)^3(8x^3+9x^2+2x)$$
+3:
+$$2(x^2+y^2)(2x+2yy') = 25(2x+2yy')$$
+solving for $y'$:
+$$y'=-{25x-2x(x^2+y^2)\over25y-2y(x^2+y^2)}$$
+4:
+$$\cos x^2-2x^2\sin x^2=y'\sin^2 y + y(2\sin y)(\cos y) y'$$
+$$y'={\cos x^2-2x^2\sin x^2\over\sin^2 y + y(2\sin y)(\cos y)}$$
 
 \end{document}
