--- a/2009-spring/181.004/rec-03-03-2009/quiz.tex
+++ b/2009-spring/181.004/rec-03-03-2009/quiz.tex
@@ -34,7 +34,7 @@ $$y'=4(2x^4+3x^3+x^2-1)^3(8x^3+9x^2+2x)$$
 3:
 $$2(x^2+y^2)(2x+2yy') = 25(2x+2yy')$$
 solving for $y'$:
-$$y'=-{25x-2x(x^2+y^2)\over25y-2y(x^2+y^2)}$$
+$$y'=-{25x-2x(x^2+y^2)\over25y-2y(x^2+y^2)}=-{x\over y}$$
 4:
 $$\cos x^2-2x^2\sin x^2=y'\sin^2 y + y(2\sin y)(\cos y) y'$$
 $$y'={\cos x^2-2x^2\sin x^2\over\sin^2 y + y(2\sin y)(\cos y)}$$
