--- a/2009-spring/181.002/rec-03-24-2009/recitation.tex
+++ b/2009-spring/181.002/rec-03-24-2009/recitation.tex
@@ -10,42 +10,54 @@
 \noindent TA: Ondřej Čertík\\
 web: \url{http://hpfem.math.unr.edu/~ondrej/}\\
 class: MATH 181\\
-date: February 24, 2009
+date: March 26, 2009
 
 \section{Introduction}
 
-We did retakes, then problems from the section 3.2, so a product rule and a
-quotient rule.
+Today we did some hard and involved problems from the section 4.1 and then a
+preview of the section 4.2 plus a home take quiz.
 
-\section{Problem}
+\section{Problem 1}
 
-Interesting problem is page 192, prob. 54a).
+It's 4.1, problem 31.
 
-Find equations of both lines through the point $(2, -3)$ that are tangent to
-the parabola $y=x^2+x$.
+If two resistors with resistances $R_1$ and $R_2$ are connected in parallel, as
+in the figure, then the total resistance $R$, measured in ohms ($\Omega$), is
+given by
+$$
+{1\over R} = {1\over R_1} + {1\over R_2}
+$$
+If $R_1$ and $R_2$ are increasing at rates of
+$0.3\rm\,{\Omega\over s}$
+and
+$0.2\rm\,{\Omega\over s}$,
+respectively, how fast is $R$ changing when $R_1=80\Omega$ and $R_2=100\Omega$?
 
-Solution:
+\subsection*{Answer}
 
-The slope of a tangent line at a point $x=x_0$ is:
-$$m(x_0) = y'(x_0) = 2x_0+1$$
-So the equation of the tangent line (passing through the point $(2, -3)$) at the point $x=x_0$ is:
-$$m(x_0) = {y-y_1\over x-x_1} = {y-(-3)\over x-2}$$
-$$2x_0 +1 = {y+3\over x-2}$$
-or:
-$$y = (2x_0+1)(x-2)-3$$
-We still have one unknown in the equation: $x_0$. To determine it, we use the
-fact, that at the point $(x_0, y(x_0)$, the $y$-coordinate coming from both the
-equation of the line and the parabola must be the same, since they both
-intersect at that point, e.g.:
-$$y(x_0) = y(x_0)$$
-$$(2x_0+1)(x_0-2)-3=x_0^2+x_0$$
-Solving this yields two solutions, $x_0 = 5$ and $x_0 = -1$. So the equations
-of the two tangent lines are:
-$$y = (2\cdot 5+1)(x-2)-3 = 11x-25$$
-$$y = (2\cdot (-1)+1)(x-2)-3 = -x-1$$
+We express $R$:
+$$R = {R_1R_2\over R_1+R_2}$$
+and differentiate with respect to $t$:
+$$R' =
+{(R_1R_2)'(R_1+R_2) - R_1R_2(R_1+R_2)'\over (R_1+R_2)^2}=
+{(R_1'R_2+R_1R_2')(R_1+R_2) - R_1R_2(R_1'+R_2')\over (R_1+R_2)^2}
+$$
+Now we can substitute the values for $R_1$, $R_2$,
+${\d R_1\over \d t}=0.3\rm\,{\Omega\over s}$
+and
+${\d R_2\over \d t}=0.2\rm\,{\Omega\over s}$:
+$$R'=
+{(0.3\cdot 100+80\cdot0.2)(80+100) - 80\cdot100(0.3+0.2)\over (80+100)^2}
+{\rm\Omega\over s}
+=
+{107\over810}
+{\rm\Omega\over s}
+\doteq
+0.132
+{\rm\,\Omega\over s}
+$$
+\section{Quiz}
 
-\section{Quizzes}
-
-The Quiz 11 is a hometake, due Thursday.
+The Quiz 17 is a hometake, due Tuesday.
 
 \end{document}
